--- a/src/thesis_schneg/descr_stats_studies.ipynb
+++ b/src/thesis_schneg/descr_stats_studies.ipynb
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -603,41 +603,41 @@
      "output_type": "stream",
      "text": [
       "Start loading \"character-count-frequencies-queries\"\n",
-      "AOL loaded in 0.25709611574808755 min\n",
+      "AOL loaded in 0.35663317839304604 min\n",
       "/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/analysis_data/analysis/aql-character-count-frequencies-queries-special\n",
-      "AQL loaded in 0.42994840145111085 min\n",
-      "MS-MARCO loaded in 0.17511590719223022 min\n",
-      "ORCAS loaded in 0.14042740662892658 min\n",
+      "AQL loaded in 0.9555813868840536 min\n",
+      "MS-MARCO loaded in 0.2065529505411784 min\n",
+      "ORCAS loaded in 0.14613961776097614 min\n",
       "Start loading \"character-count-frequencies-named-entities\"\n",
-      "AOL loaded in 0.1596208413441976 min\n",
+      "AOL loaded in 0.1673794428507487 min\n",
       "/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/analysis_data/analysis/aql-character-count-frequencies-named-entities-special\n",
-      "AQL loaded in 0.19844696124394734 min\n",
-      "MS-MARCO loaded in 0.10190348227818807 min\n",
-      "ORCAS loaded in 0.0915763815244039 min\n",
+      "AQL loaded in 0.2386418581008911 min\n",
+      "MS-MARCO loaded in 0.11655310392379761 min\n",
+      "ORCAS loaded in 0.14881667693456013 min\n",
       "Start loading \"character-count-frequencies-words\"\n",
-      "AOL loaded in 0.08506865501403808 min\n",
+      "AOL loaded in 0.09455159902572632 min\n",
       "/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/analysis_data/analysis/aql-character-count-frequencies-words-special\n",
-      "AQL loaded in 0.1815472920735677 min\n",
-      "MS-MARCO loaded in 0.05006550550460816 min\n",
-      "ORCAS loaded in 0.05542085568110148 min\n",
+      "AQL loaded in 0.15782722234725952 min\n",
+      "MS-MARCO loaded in 0.052733282248179116 min\n",
+      "ORCAS loaded in 0.062456834316253665 min\n",
       "Start loading \"word-count-frequencies-queries\"\n",
-      "AOL loaded in 0.030011538664499918 min\n",
+      "AOL loaded in 0.03332105080286662 min\n",
       "/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/analysis_data/analysis/aql-word-count-frequencies-queries-special\n",
-      "AQL loaded in 0.09445792039235433 min\n",
-      "MS-MARCO loaded in 0.04532300631205241 min\n",
-      "ORCAS loaded in 0.02597992420196533 min\n",
+      "AQL loaded in 0.10317930777867636 min\n",
+      "MS-MARCO loaded in 0.08918993473052979 min\n",
+      "ORCAS loaded in 0.02804205020268758 min\n",
       "Start loading \"word-count-frequencies-named-entities\"\n",
-      "AOL loaded in 0.020469991366068523 min\n",
+      "AOL loaded in 0.018865342934926352 min\n",
       "/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/analysis_data/analysis/aql-word-count-frequencies-named-entities-special\n",
-      "AQL loaded in 0.03954208294550578 min\n",
-      "MS-MARCO loaded in 0.023341278235117596 min\n",
-      "ORCAS loaded in 0.014439829190572103 min\n",
+      "AQL loaded in 0.05913161039352417 min\n",
+      "MS-MARCO loaded in 0.03522869348526001 min\n",
+      "ORCAS loaded in 0.016342671712239583 min\n",
       "Start loading \"entity-count-frequencies-queries\"\n",
-      "AOL loaded in 0.008764942487080893 min\n",
+      "AOL loaded in 0.008513017495473226 min\n",
       "/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/analysis_data/analysis/aql-entity-count-frequencies-queries-special\n",
-      "AQL loaded in 0.026043983300526936 min\n",
-      "MS-MARCO loaded in 0.02601266304651896 min\n",
-      "ORCAS loaded in 0.06131262381871541 min\n"
+      "AQL loaded in 0.028095078468322755 min\n",
+      "MS-MARCO loaded in 0.009815410772959391 min\n",
+      "ORCAS loaded in 0.013674139976501465 min\n"
      ]
     }
    ],
@@ -667,43 +667,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "character-count-frequencies-queries aol         2.955317\n",
-      "aql         4.511405\n",
-      "ms-marco    2.578870\n",
-      "orcas       3.618188\n",
-      "dtype: float64\n",
-      "character-count-frequencies-named-entities aol         1.177607\n",
-      "aql         1.741028\n",
-      "ms-marco    1.419535\n",
-      "orcas       0.951711\n",
-      "dtype: float64\n",
-      "character-count-frequencies-words aol         3.550167\n",
-      "aql         3.537710\n",
-      "ms-marco    3.701646\n",
-      "orcas       2.642994\n",
-      "dtype: float64\n",
-      "word-count-frequencies-queries aol         0.538285\n",
-      "aql         0.657315\n",
-      "ms-marco    0.483704\n",
-      "orcas       0.645241\n",
-      "dtype: float64\n",
-      "word-count-frequencies-named-entities aol         0.091685\n",
-      "aql         0.168510\n",
-      "ms-marco    0.103952\n",
-      "orcas       0.145497\n",
-      "dtype: float64\n",
-      "entity-count-frequencies-queries aol         0.082719\n",
-      "aql         0.094958\n",
-      "ms-marco    0.066785\n",
-      "orcas       0.067694\n",
-      "dtype: float64\n"
+      "character-count-frequencies-queries\n",
+      "           aol   aql  ms-marco  orcas\n",
+      "aol       0.00  5.54      2.56   3.72\n",
+      "aql       5.54  0.00      4.75   7.75\n",
+      "ms-marco  2.56  4.75      0.00   3.00\n",
+      "orcas     3.72  7.75      3.00   0.00\n",
+      "character-count-frequencies-named-entities\n",
+      "           aol   aql  ms-marco  orcas\n",
+      "aol       0.00  2.12      1.79   0.80\n",
+      "aql       2.12  0.00      2.86   1.98\n",
+      "ms-marco  1.79  2.86      0.00   1.03\n",
+      "orcas     0.80  1.98      1.03   0.00\n",
+      "character-count-frequencies-words\n",
+      "           aol   aql  ms-marco  orcas\n",
+      "aol       0.00  3.69      6.31   4.20\n",
+      "aql       3.69  0.00      6.29   4.17\n",
+      "ms-marco  6.31  6.29      0.00   2.20\n",
+      "orcas     4.20  4.17      2.20   0.00\n",
+      "word-count-frequencies-queries\n",
+      "           aol   aql  ms-marco  orcas\n",
+      "aol       0.00  0.58      0.69   0.89\n",
+      "aql       0.58  0.00      0.81   1.25\n",
+      "ms-marco  0.69  0.81      0.00   0.44\n",
+      "orcas     0.89  1.25      0.44   0.00\n",
+      "word-count-frequencies-named-entities\n",
+      "           aol   aql  ms-marco  orcas\n",
+      "aol       0.00  0.19      0.06   0.11\n",
+      "aql       0.19  0.00      0.18   0.30\n",
+      "ms-marco  0.06  0.18      0.00   0.17\n",
+      "orcas     0.11  0.30      0.17   0.00\n",
+      "entity-count-frequencies-queries\n",
+      "           aol   aql  ms-marco  orcas\n",
+      "aol       0.00  0.18      0.12   0.03\n",
+      "aql       0.18  0.00      0.06   0.15\n",
+      "ms-marco  0.12  0.06      0.00   0.09\n",
+      "orcas     0.03  0.15      0.09   0.00\n"
      ]
     }
    ],
@@ -715,8 +721,6 @@
     "distances_data = {}\n",
     "for analysis, datasets in analysis_data.items():\n",
     "    x_max = get_max_x(datasets, f\"{analysis.split('-')[0]}-count\")\n",
-    "    # print(x_max)\n",
-    "    # distances = ndarray((len(datasets), len(datasets)))\n",
     "    distances = DataFrame(np.zeros((len(datasets), len(datasets))), index=datasets.keys(), columns=datasets.keys())\n",
     "    names = []\n",
     "    j=0\n",
@@ -734,23 +738,23 @@
     "                x_vals2 = data2[f\"{analysis.split('-')[0]}-count\"][0:x_max]\n",
     "                y_vals2 = data2['count()'][0:x_max]\n",
     "                dist = wasserstein_distance(x_vals, x_vals2, u_weights=y_vals, v_weights=y_vals2)\n",
-    "            # distances[i][j] = dist\n",
-    "            distances.iloc[i, j] = dist\n",
+    "            distances.iloc[i, j] = round(dist,2)\n",
     "            i+=1\n",
     "        j+=1\n",
     "    distances = distances + distances.T\n",
     "    distances_data.update({analysis: distances})\n",
     "    cnt+=1\n",
-    "# for key, value in distances_data.items():\n",
-    "#     print(value)\n",
+    "for key, value in distances_data.items():\n",
+    "    print(key)\n",
+    "    print(value)\n",
     "\n",
     "## get avarage wasserstein distances per query log\n",
-    "avg_distances = {}\n",
-    "for analysis, distances in distances_data.items():\n",
-    "    avg_distances.update({analysis: distances.mean()})\n",
+    "# avg_distances = {}\n",
+    "# for analysis, distances in distances_data.items():\n",
+    "#     avg_distances.update({analysis: distances.mean()})\n",
     "    \n",
-    "for key, value in avg_distances.items():\n",
-    "    print(key, value)"
+    "# for key, value in avg_distances.items():\n",
+    "#     print(key, value)"
    ]
   },
   {
