--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -72,6 +72,7 @@
 \usepackage{comment} % for commenting (added 2/22/2025)
 % \includecomment{comment}
 \usepackage{lipsum} % for commenting (added 3/4/2025)
+\usepackage{multirow} % for tables (added 3/7/2025)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % Commenting (by your supervisor)
