--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -135,6 +135,18 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+@inproceedings{chen:2024,
+author = {Chen, Qi and Geng, Xiubo and Rosset, Corby and Buractaon, Carolyn and Lu, Jingwen and Shen, Tao and Zhou, Kun and Xiong, Chenyan and Gong, Yeyun and Bennett, Paul and Craswell, Nick and Xie, Xing and Yang, Fan and Tower, Bryan and Liu, Zheng and Li, Mingqin and Liu, Chuanjie and Li, Jason (Zengzhong) and Majumder, Rangan and Neville, Jennifer and Simhadri, Harsha and Varma, Manik and Wang, Yujing and Yang, Linjun and Yang, Mao and Zhang, Ce},
+title = {MS MARCO Web Search: A Large-scale Information-rich Web Dataset with Millions of Real Click Labels},
+organization = {ACM},
+booktitle = {2024 The Web Conference},
+year = {2024},
+month = {May},
+publisher = {WWW '24: Companion Proceedings of the ACM on Web Conference 2024},
+url = {https://www.microsoft.com/en-us/research/publication/ms-marco-web-search-a-large-scale-information-rich-web-dataset-with-millions-of-real-click-labels/},
+pages = {292-301},
+}
+
 @article{cooper:2008,
   author       = {Alissa Cooper},
   title        = {A survey of query log privacy-enhancing techniques from a policy perspective},
@@ -186,4 +198,34 @@
   timestamp    = {Tue, 06 Nov 2018 16:57:28 +0100},
   biburl       = {https://dblp.org/rec/conf/infoscale/PassCT06.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{panaretos:2019,
+   author = "Victor M. Panaretos and
+    Yoav Zemel",
+   title = "Statistical Aspects of Wasserstein Distances", 
+   journal= "Annual Review of Statistics and Its Application",
+   year = "2019",
+   volume = "6",
+   number = "Volume 6, 2019",
+   pages = "405-431",
+   doi = "https://doi.org/10.1146/annurev-statistics-030718-104938",
+   url = "https://www.annualreviews.org/content/journals/10.1146/annurev-statistics-030718-104938",
+   publisher = "Annual Reviews",
+   issn = "2326-831X",
+   type = "Journal Article",
+  }
+
+@article{craswell:2020,
+title={ORCAS: 18 Million Clicked Query-Document Pairs for Analyzing Search},
+author={Craswell, Nick and Campos, Daniel and Mitra, Bhaskar and Yilmaz, Emine and Billerbeck, Bodo},
+journal={arXiv preprint arXiv:2006.05324},
+year={2020}
+}
+
+@article{overwijk:2022,
+  title={Clueweb22: 10 billion web documents with visual and semantic information},
+  author={Overwijk, Arnold and Xiong, Chenyan and Liu, Xiao and VandenBerg, Cameron and Callan, Jamie},
+  journal={arXiv preprint arXiv:2211.15848},
+  year={2022}
 }
